index.html first draft complete

--- a/index.html
+++ b/index.html
@@ -16,11 +16,29 @@
                 <p id="navbar-subtitle">The Leadership Experience</p>
             </div>
             <ul class="navbar-item">
-                <li class="navbar-li"><a href="#" class="navbar-link">Home</a></li>
-                <li class="navbar-li"><a href="#" class="navbar-link">About</a></li>
-                <li class="navbar-li"><a href="#" class="navbar-link">More Info</a></li>
-                <li class="navbar-li"><a href="#" class="navbar-link">Signup</a></li>
+                <li class="navbar-li"><a href="index.html" class="navbar-link">Home</a></li>
+                <li class="navbar-li"><a href="about.html" class="navbar-link">About</a></li>
+                <li class="navbar-li"><a href="more-info.html" class="navbar-link">More Info</a></li>
+                <li class="navbar-li"><a href="signup.html" class="navbar-link">Signup</a></li>
             </ul>
+        </div>
+        <img class="full-width" src="images/welcome-image.jpeg">
+        <div id="main-content">
+            <h1>Buckskin Youth Leadership Training Course</h1>
+            <div id="info-panel-section">
+                <div class="info-panel">
+                    <h2>LEARN</h2>
+                    <p>Our scouts learn 13 fundamental leadership skills for starting or continuing their progress as youth leaders in a troop and in their community. They also learn various beginner and advanced outdoor skills and techniques to extend the standard scouting curriculum. Click here to learn more about these skills.</p>
+                </div>
+                <div class="info-panel">
+                    <h2>PRACTICE</h2>
+                    <p>Buckskin gives each scout the opportunity to practice each leadership, scouting, and soft skill in a safe and structured environment with the guidance of an experienced all-Eagle Scout staff with over 35 years of scout educational experience. Click here to learn more about how our scouts practice what they learn.</p>
+                </div>
+                <div class="info-panel">
+                    <h2>IMPLEMENT</h2>
+                    <p>For every 1 hour of classroom-style learning and practice, Buckskin scouts will experience at least 2 hours of skill implementation in an outdoor environment. With over 70 targeted games and 3 major challenges, these scouts will not only walk away with fundamental knowledge but also hands-on experience. Click here to learn more about the Buckskin Experience.</p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
